package main.java.td2.forum.v2;

public interface Composant {

    public String sujet();
    public String toString();
}
