package main.java.td2.forum.v2;

public interface Contenu extends Composant{
}
